<resources>
    <string name="app_name">Taskmanager</string>
    <string name="team_details">Team Details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_workitem_button">Add</string>
    <string name="slogan">Manage your work</string>
    <string name="add_member">+ Add user</string>
    <string name="update">Update</string>
    <string name="workitem_assigned_user">Assigned user</string>
    <string name="workitem_status">Status</string>
    <string name="unstarted">unstarted</string>
    <string name="started">started</string>
    <string name="done">done</string>
    <string name="my_items">my items</string>
    <string name="teamname">Team</string>
    <string name="users">Users</string>
    <string name="task">Task</string>
    <string name="r">r</string>
    <string name="search_hint">Search</string>
    <string name="log_out">Log Out</string>
    <string name="sig_out">Sig out!</string>
    <string name="new_teamname">New Teamname</string>
    <string name="create_team">Create new team</string>
    <string name="action_add_user">Add</string>
    <string name="action_remove_user">Remove</string>
    <string name="added">ADDED</string>
    <string-array name="workitem_status">
        <item>Unstarted</item>
        <item>Started</item>
        <item>Done</item>
        <item>Archived</item>
    </string-array>
</resources>
