<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:paddingTop="13dp"/>

    <EditText
        android:id="@+id/ed_update_title"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:paddingLeft="11dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/ed_update_description"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:paddingLeft="11dp"/>

    <TextView
        android:id="@+id/tv_workitem_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workitem_status"
        android:textSize="20dp"
        android:paddingLeft="11dp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workitem_assigned_user"
        android:textSize="20sp"
        android:paddingLeft="11dp"
        android:paddingTop="10dp"/>


    <Button
        android:id="@+id/update_btn"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>