<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.rejjd.taskmanager.TeamUpdateActivity">

    <TextView
        android:id="@+id/title_team_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamname"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:paddingTop="13dp"/>

    <EditText
        android:id="@+id/ed_team_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/team_update_btn"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/title_new_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_teamname"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:paddingTop="13dp"/>

    <EditText
        android:id="@+id/ed_new_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/team_create_btn"
        android:text="@string/create_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
