<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/new_bg"
    tools:context="se.rejjd.taskmanager.SignInActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78sp">

        <TextView
            android:id="@+id/tv_beginning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="@color/background"
            android:textSize="60sp"/>

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_beginning"
            android:text="@string/r"
            android:textColor="@color/primary_orange"
            android:textSize="60sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_presentation"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230sp"
        android:text="@string/slogan"
        style="@style/chart_text"
        android:lines="2"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="44sp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460sp"
        android:textColor="@color/common_google_signin_btn_text_light"/>

</RelativeLayout>